<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <!-- Top bar -->
    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">



        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_profile"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"/>


    </LinearLayout>

    <!-- Avatar + cambiar -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingVertical="12dp"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/usuario"
            android:background="@color/white"
            android:scaleType="centerCrop"
            android:contentDescription="@string/profile_photo"/>

        <TextView
            android:id="@+id/tvCambiarFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/change_photo"
            android:textColor="@color/green_light"
            android:textStyle="bold"/>
    </LinearLayout>

    <!-- Formulario -->
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilNombreMostrado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/display_name"
                android:textColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNombreMostrado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/username"
                android:textColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--            <com.google.android.material.textfield.TextInputLayout-->
            <!--                android:id="@+id/ilEmail"-->
            <!--                android:hint="@string/email"-->
            <!--                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_margin="5dp"-->
            <!--                android:layout_height="wrap_content">-->

            <!--                <com.google.android.material.textfield.TextInputEditText-->
            <!--                    android:id="@+id/etEmail"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:inputType="textUri"-->
            <!--                    android:textColor="@color/white" />-->
            <!--            </com.google.android.material.textfield.TextInputLayout>-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ilBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bio"
                android:textColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etBio"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:inputType="textMultiLine"
                    android:maxLength="500"
                    android:maxLines="4"
                    android:overScrollMode="always"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- Botones al final -->
            <LinearLayout
                android:id="@+id/bottomButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnCancelar"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/cancel"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cerrar"
                    app:tint="@color/red" />

                <Space
                    android:layout_width="32dp"
                    android:layout_height="0dp" />

                <ImageButton
                    android:id="@+id/btnGuardar"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/save"
                    android:scaleType="centerCrop"
                    android:src="@drawable/correcto"
                    app:tint="@color/green_light" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEliminarCuenta"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/red"
        android:text="@string/delete"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
