<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <!-- Logo -->
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/logo"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Subtítulo -->
    <TextView
        android:id="@+id/tvSubtituloRegistro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_subtitle"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Correo/Teléfono -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilCorreoTelefono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvSubtituloRegistro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCorreoElectronico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"

            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Nombre completo -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilNombreCompleto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp"
        android:hint="@string/full_name"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/ilCorreoTelefono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombreCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Nombre de usuario -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilNombreUsuario"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp"
        android:hint="@string/username"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/ilNombreCompleto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Contraseña -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilContrasena"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp"
        android:hint="@string/password"
        android:textColor="@color/white"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/ilNombreUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Confirmar contraseña -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilConfirmarContrasena"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp"
        android:hint="@string/repeat_password"
        android:textColor="@color/white"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/ilContrasena"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmarContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botón Registrarte -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegistrarte"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:backgroundTint="@color/green_light"
        app:layout_constraintTop_toBottomOf="@id/ilConfirmarContrasena"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Términos -->
    <TextView
        android:id="@+id/tvTerminosPrivacidad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/terms_privacy"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/btnRegistrarte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <ProgressBar
        android:id="@+id/progress" android:visibility="gone"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
